--- a/Vercel.json
+++ b/Vercel.json
@@ -1,8 +1,8 @@
 {
     "routes":[
         {
-            "src":"/Payment",
-            "dest": "/Payment"
+            "src":"/payment",
+            "dest": "/"
           }      
     ]
 }
