--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.0.1",
-
     "animate.css": "^4.1.1",
-
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -25,9 +23,8 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.22.1",
     "redux-persist": "^6.0.0",
-
+    "spinners-react": "^1.0.7",
     "sweetalert2": "^11.10.5",
-
     "yup": "^1.3.3"
   },
   "devDependencies": {
