--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.22.1",
+    "react-scroll": "^1.9.0",
     "redux-persist": "^6.0.0",
     "spinners-react": "^1.0.7",
     "sweetalert2": "^11.10.5",
